Revert "chore: update liveness and readiness probes"
This reverts commit 61ad8b3e951c036bd9bfc09fecbda98ffb973828.

--- a/charts/node/templates/node-statefulset.yaml
+++ b/charts/node/templates/node-statefulset.yaml
@@ -153,10 +153,8 @@ spec:
           {{- end }}
           {{- if .Values.node.readinessProbe.enabled }}
           readinessProbe:
-            exec:
-              command:
-                - /bin/sh
-                - /usr/local/bin/readiness.sh
+            tcpSocket:
+              port: {{ .Values.node.ports.p2p.port }}
             initialDelaySeconds: {{ .Values.node.readinessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.node.readinessProbe.periodSeconds }}
             timeoutSeconds: {{ .Values.node.readinessProbe.timeoutSeconds }}
@@ -164,10 +162,8 @@ spec:
           {{- end }}
           {{- if .Values.node.livenessProbe.enabled }}
           livenessProbe:
-            exec:
-              command:
-                - /bin/sh
-                - /usr/local/bin/liveness.sh
+            tcpSocket:
+              port: {{ .Values.node.ports.p2p.port }}
             initialDelaySeconds: {{ .Values.node.livenessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.node.livenessProbe.periodSeconds }}
             timeoutSeconds: {{ .Values.node.livenessProbe.timeoutSeconds }}
