--- a/charts/node/values.yaml
+++ b/charts/node/values.yaml
@@ -462,7 +462,9 @@ engine:
 
       # -- arb node http endpoint
       http_endpoint: ""
-
+    sol:
+      # -- solana node http endpoint
+      http_endpoint: ""
   livenessProbe:
     # -- enable liveness probe
     enabled: true
