--- a/charts/chainflip-prometheus-exporter/values.yaml
+++ b/charts/chainflip-prometheus-exporter/values.yaml
@@ -118,5 +118,5 @@ serviceMonitor:
       action: keep
       regex: chainflip-prometheus-exporter
   metricRelabelings:
-    - regex: (instance)
+    - regex: (pod|instance)
       action: labeldrop
