--- a/charts/chainflip-prometheus-exporter/templates/service.yaml
+++ b/charts/chainflip-prometheus-exporter/templates/service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ include "chainflip-prometheus-exporter.fullname" . }}-metrics"
+  labels: {{ include "chainflip-prometheus-exporter.labels" . | nindent 4 }}
   {{- with .Values.service.annotations }}
   annotations:
   {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  selector:
-    app: "{{ include "chainflip-prometheus-exporter.fullname" . }}"
+  selector: {{ include "chainflip-prometheus-exporter.selectorLabels" . | nindent 4 }}
   ports:
     - port: {{ .Values.port }}
       targetPort: metrics
