chore: make `rpc` node default role 😁

--- a/charts/broker-api/templates/secret.yaml
+++ b/charts/broker-api/templates/secret.yaml
@@ -6,5 +6,5 @@ metadata:
   labels:
     {{- include "broker-api.labels" . | nindent 4 }}
 data:
-  signing-key: {{ required "Please provide a value for .Values.config.key.signingKey" .Values.config.key.signingKey | b64enc | quote }}
+  signing-key: {{ required "Please provide a value for .Values.config.key.signingKey To generate one, check: https://github.com/chainflip-io/chainflip-mainnet-apis?tab=readme-ov-file#generating-keys" .Values.config.key.signingKey | b64enc | quote }}
 {{- end }}
