--- a/charts/node/templates/node-statefulset.yaml
+++ b/charts/node/templates/node-statefulset.yaml
@@ -6,7 +6,7 @@ metadata:
   {{- include "chainflip-node.labels" . | nindent 4 }}
 spec:
   serviceName: {{ include "chainflip-node.fullname" . }}
-  {{- if or (eq .Values.common.role "archive") (eq .Values.common.role "full") }}
+  {{- if or (eq .Values.common.role "archive") (eq .Values.common.role "rpc") }}
   replicas: {{ .Values.node.replicas }}
   updateStrategy:
     type: RollingUpdate
@@ -89,6 +89,9 @@ spec:
             {{- if eq .Values.common.role "archive" }}
             - --blocks-pruning=archive
             - --state-pruning=archive
+            {{- end }}
+            {{- if ne .Values.common.role "archive" }}
+            - --sync=warp
             {{- end }}
             - --port={{ .Values.node.ports.p2p.port  }}
             {{- if .Values.node.ports.metrics.enabled }}
