--- a/charts/node/templates/shared-secret.yaml
+++ b/charts/node/templates/shared-secret.yaml
@@ -11,6 +11,7 @@ metadata:
 data:
   signing-key: {{ required "Please provide a signing key; --set common.keys.signingKey"  .Values.common.keys.signingKey | b64enc | quote}}
   ethereum-key: {{ required "Please provide an ethereum key; --set common.keys.ethereumKey" .Values.common.keys.ethereumKey | b64enc | quote }}
+  arbitrum-key: {{ required "Please provide an arbitrum key; --set common.keys.arbitrumKey" .Values.common.keys.arbitrumKey | b64enc | quote }} 
   node-key: {{ required "Please provide a node key; --set common.keys.nodeKey" .Values.common.keys.nodeKey | b64enc | quote }}
 {{- end }}
 {{- end }}
