--- a/charts/node/tests/values/happy.values.yaml
+++ b/charts/node/tests/values/happy.values.yaml
@@ -20,3 +20,7 @@ engine:
       http_endpoint: "test"
     sol:
       http_endpoint: "test"
+    hub:
+      http_endpoint: "test"
+      ws_endpoint: "test"
+      
