--- a/charts/node/templates/shared-secret.yaml
+++ b/charts/node/templates/shared-secret.yaml
@@ -15,3 +15,19 @@ data:
   node-key: {{ required "Please provide a node key; --set common.keys.nodeKey" .Values.common.keys.nodeKey | b64enc | quote }}
 {{- end }}
 {{- end }}
+
+{{- if eq .Values.common.role "lp" }}
+{{- $existingSecret := .Values.common.keys.existingSecret }}
+{{- $generateKeysOnStart := .Values.common.keys.generateKeysOnStart }}
+{{- if ne (eq $existingSecret "") $generateKeysOnStart }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "node.fullname" . }}
+  labels:
+    {{- include "node.labels" . | nindent 4 }}
+data:
+  lp-key: {{ required "Please provide a  key; --set common.keys.lpKey"  .Values.common.keys.lpKey | b64enc | quote}}
+{{- end }}
+{{- end }}
+{{- end }}
